# jobify

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml  test.py  test1.py  zensical.toml
.github/: dependabot.yml  zizmor.yml
.github/workflows/: docs.yml  pr-tests.yaml  pr_codeql.yml  pr_dependency_review.yml  pr_tests.yaml  pr_tests.yml  publish_coverage.yml  publish_pypi.yaml  publish_pypi.yml
benchmarks/: README.md  basics.py  bench.py  benches.json  jobify_app.py  latency_run.py  results.txt  serializers.py
docs/: CHANGELOG.md  app_settings.md  context.md  contributing.md  index.md  integrations.md  job.md  router.md  schedule.md  task_settings.md
docs/advanced_usage/: exception_handlers.md  exceptions.md  system_time.md
examples/real_world/: README.md  pyproject.toml
examples/real_world/src/real_world/: backup_db.py  configs.py  main.py  notifications.py
src/iojobs/: __init__.py
src/iojobs/_internal/: _inner_deps.py  _inner_scope.py  _types.py  command_runner.py  constants.py  datastructures.py  enums.py  exceptions.py  executors.py  executors_pool.py  func_original.py  func_wrapper.py  job_executor.py  job_runner.py  scheduler.py
src/iojobs/_internal/durable/: abc.py  sqlite.py
src/iojobs/_internal/middleware/: base.py  resolver.py
src/iojobs/_internal/runner/: command.py  job.py  runner.py
src/iojobs/_internal/serializers/: __init__.py  abc.py  ast_literal.py  json.py  pickle_unsafe.py
src/iojobs/errors/: __init__.py
src/iojobs/exceptions/: __init__.py
src/iojobs/middleware/: __init__.py
src/iojobs/serializers/: __init__.py
src/jobber/: __init__.py  crontab.py  jobber.py
src/jobber/_internal/: _inner_scope.py  annotations.py  configuration.py  constants.py  context.py  cron_parser.py  datastructures.py  exceptions.py  func_wrapper.py  handler.py  injection.py  jobber.py  message.py  routing.py  shared_state.py  type_registry.py
src/jobber/_internal/common/: constants.py  datastructures.py  types.py
src/jobber/_internal/durable/: abc.py  dummy.py  sqlite.py
src/jobber/_internal/middleware/: base.py  exceptions.py  pipeline.py  retry.py  timeout.py
src/jobber/_internal/router/: base.py  node.py  root.py
src/jobber/_internal/routers/: base.py  node.py  root.py
src/jobber/_internal/runner/: command.py  executor.py  job.py  runnable.py  runner.py  runners.py  scheduler.py
src/jobber/_internal/serializers/: abc.py  base.py  json.py  json_extended.py  pickle_unsafe.py
src/jobber/_internal/storage/: abc.py  dummy.py  sqlite.py
src/jobber/_internal/typeadapter/: base.py  dummy.py
src/jobber/exceptions/: __init__.py
src/jobber/middleware/: __init__.py
src/jobber/serializers/: __init__.py
src/jobber/storage/: __init__.py
src/jobify/: __init__.py  crontab.py  jobify.py
src/jobify/_internal/: configuration.py  context.py  exceptions.py  injection.py  inspection.py  message.py  runners.py  shared_state.py  task_tracker.py
src/jobify/_internal/common/: constants.py  datastructures.py  types.py
src/jobify/_internal/middleware/: base.py  exceptions.py  retry.py  timeout.py
src/jobify/_internal/router/: base.py  node.py  root.py
src/jobify/_internal/scheduler/: job.py  misfire_policy.py  scheduler.py
src/jobify/_internal/serializers/: base.py  json.py  json_extended.py  pickle_unsafe.py
src/jobify/_internal/storage/: abc.py  dummy.py  sqlite.py
src/jobify/_internal/typeadapter/: base.py  dummy.py
src/jobify/exceptions/: __init__.py
src/jobify/middleware/: __init__.py
src/jobify/router/: __init__.py
src/jobify/serializers/: __init__.py
src/jobify/storage/: __init__.py
src/jobify/typeadapter/: __init__.py
src/taskaio/: __init__.py
src/taskaio/_internal/: _type_guards.py  cron_parser.py  exceptions.py  executors.py  func_wrapper.py  scheduler.py  task_executor.py  task_plan.py  wrapper_func.py
src/taskaio/_internal/taskplan/: async_task.py  base.py  sync_task.py
src/taskaio/errors/: __init__.py
tests/: conftest.py  test_cron.py  test_datastructures.py  test_exceptions.py  test_func_wrapper.py  test_injection.py  test_job.py  test_job_runner.py  test_jobber.py  test_jobify.py  test_lifespan.py  test_middleware.py  test_route.py  test_router.py  test_scheduler.py  test_serializer.py  test_storage.py
