[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[project]
name = "iojobs"
version = "0.0.1"
description = "Lightweight async/sync job scheduler with cron-like syntax and delayed execution for Python functions"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sergey Yavorsky", email = "maclovi.dev@gmail.com" },
]
keywords = [
    "cron",
    "cron-jobs",
    "scheduler",
    "delayed-tasks",
    "job-scheduler",
    "task-scheduler",
    "background-tasks",
]
classifiers = [
    "Typing :: Typed",
    "Framework :: Pytest",
    "Framework :: AsyncIO",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "crontab==1.0.5",
    "tzdata==2025.2; sys_platform == 'win32'",
]

[dependency-groups]
lint = [
    "mypy==1.18.2",
    "ruff==0.14.2",
    "bandit==1.8.6",
    "zizmor==1.16.0",
    "semgrep==1.141.0",
    "codespell==2.4.1",
    "basedpyright==1.32.1",
    # mypy extensions
    "mypy-extensions==1.1.0",
    "types-setuptools",
]
test = [
    "coverage[toml]==7.11.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-timeout>=2.4.0",
    "pytest-cov>=6.2.1",
    "covdefaults>=2.3.0",
]
docs = [
    "zensical==0.0.6",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "docs" },
    "pre-commit==4.3.0",
    "detect-secrets==1.5.0",
]

[project.urls]
Homepage = "https://github.com/Maclovi/iojobs"
Documentation = "https://github.com/Maclovi/iojobs/README.md"
Repository = "https://github.com/Maclovi/iojobs"
Issues = "https://github.com/Maclovi/iojobs/issues"

# Tests
[tool.pytest.ini_options]
xfail_strict = true
timeout = 30
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = []

[tool.coverage.run]
plugins = ["covdefaults"]
parallel = true
branch = true
concurrency = ["thread", "multiprocessing"]
source = ["src", "tests"]
omit = ["**/__init__.py"]

[tool.coverage.report]
fail_under = 95
skip_empty = true
show_missing = true
exclude_also = [
    'if TYPE_CHECKING:',
    "if __name__ == .__main__.:",
    '@()?abstractmethod',
    "raise NotImplementedError",
    "pass",
    '\.\.\.',
]
omit = [
    "*/__init__.py",
    '*/annotations.py',
]

# Static Analysis
[tool.basedpyright]
include = ["src", "tests"]
ignore = ["**/__pycache__", "**/alembic"]
pythonVersion = "3.10"
reportImplicitOverride = false
reportAny = false

[tool.mypy]
mypy_path = "src"
files = ["src", "tests"]
python_version = "3.10"
strict = true
pretty = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
show_error_codes = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[tool.semgrep]
paths = ["src"]
include = ["src"]

[tool.bandit]
targets = "src"

# Liter
[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
target-version = "py310"
line-length = 79
fix = true

[tool.ruff.lint]
select = ["ALL"]
typing-extensions = false

[tool.ruff.lint.per-file-ignores]
"benchmarks/**" = ["D", "S101"]
"tests/**" = ["S101", "D", "SLF001"]
"src/iojobs/_internal/func_wrapper.py" = ["ERA001", "FIX004"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
no-lines-before = ["local-folder"]

[tool.codespell]
skip = "*.pyi,*.pyc,./site"

# Python Semantic Release
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
build_command = "uv build"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "docs/src/CHANGELOG.md"
output_format = "md"

[tool.semantic_release.changelog]
# Recommended patterns for conventional commits parser that is scope aware
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''', # codespell:ignore ommit
]

[tool.semantic_release.branches.alpha]
# Matches branches with the prefixes 'feat/', 'fix/', or 'perf/'.
match = "^(feat|fix|perf)/.+"
prerelease = true
prerelease_token = "alpha"
