[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[project]
name = "jobify"
version = "0.1.1"
description = "A modern, lightweight and robust task manager with a user-friendly interface and a wide range of features, using the low-level asyncio API and more."
requires-python = ">=3.10,<5"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sergey Yavorsky", email = "maclovi.dev@gmail.com" },
]
keywords = [
    "jobs",
    "cron",
    "asyncio",
    "cron-jobs",
    "scheduler",
    "scheduling",
    "asynchronous",
    "job-scheduler",
    "task-scheduler",
    "python-scheduler",
    "background-tasks",
    "background-jobs",
    "delayed-tasks",
]
classifiers = [
    "Typing :: Typed",
    "Framework :: Pytest",
    "Framework :: AsyncIO",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "crontab==1.0.5",
    "tzdata==2025.2; sys_platform == 'win32'",
    "typing-extensions>=4.12.0",
]

[dependency-groups]
lint = [
    "mypy==1.18.2",
    "ruff==0.14.6",
    "bandit==1.9.2",
    "zizmor==1.17.0",
    "semgrep==1.144.0",
    "codespell==2.4.1",
    "basedpyright==1.34.0",
    # mypy extensions
    "mypy-extensions==1.1.0",
    "types-setuptools",
]
test = [
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-timeout>=2.4.0",
    "pytest-cov>=6.2.1",
    "covdefaults>=2.3.0",
    "coverage[toml]==7.12.0",
]
docs = [
    "zensical==0.0.10",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "docs" },
    "pre-commit==4.5.0",
    "detect-secrets==1.5.0",
]

[project.urls]
Homepage = "https://github.com/theseriff/jobify"
Repository = "https://github.com/theseriff/jobify"
Documentation = "https://github.com/theseriff/jobify/README.md"
Changelog = "https://github.com/theseriff/jobify/blob/main/docs/CHANGELOG.md"
Issues = "https://github.com/theseriff/jobify/issues"

# Tests
[tool.pytest.ini_options]
xfail_strict = true
timeout = 10
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore:Async functions are always done in the main loop",
]
markers = []

[tool.coverage.run]
plugins = ["covdefaults"]
parallel = true
branch = true
concurrency = ["thread", "multiprocessing"]
source = ["src", "tests"]
omit = ["**/__init__.py"]

[tool.coverage.paths]
source = [
    "src",
    "/home/runner/work/jobify/jobify/src",
    "/Users/runner/work/jobify/jobify/src",
    "D:\\a\\jobify\\jobify\\src",
]
tests = [
    "tests",
    "/home/runner/work/jobify/jobify/tests",
    "/Users/runner/work/jobify/jobify/tests",
    "D:\\a\\jobify\\jobify\\tests",
]

[tool.coverage.report]
fail_under = 95
skip_empty = true
show_missing = true
exclude_also = [
    'if TYPE_CHECKING:',
    "if __name__ == .__main__.:",
    '@()?abstractmethod',
    "raise NotImplementedError",
    "pass",
    '\.\.\.',
]
omit = [
    "*/__init__.py",
    '*/types.py',
]

# Static Analysis
[tool.basedpyright]
include = ["src", "tests"]
ignore = ["**/__pycache__", "**/alembic"]
pythonVersion = "3.10"
reportAny = false
reportExplicitAny = false
reportPrivateUsage = false

[tool.mypy]
mypy_path = "src"
files = ["src", "tests"]
python_version = "3.10"
strict = true
pretty = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
show_error_codes = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[tool.semgrep]
paths = ["src"]
include = ["src"]

[tool.bandit]
targets = "src"

# Liter
[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
target-version = "py310"
line-length = 79
fix = true

[tool.ruff.lint]
select = ["ALL"]
typing-extensions = false
ignore = [
    "D203",  # Conflict: D203 ("one-blank-line-before-class-docstring") is incompatible with D211 (No blank line before class docstring). We follow D211.
    "D213",  # Conflict: D213 ("multi-line summary second line") conflicts with D212 (summary on the same line as triple quotes). We follow D212.
    "COM812", # Conflict: Danger! This rule ("trailing-comma-missing") conflicts with the automatic behavior of "ruff format", which manages trailing commas.
    "SLF001",
]

[tool.ruff.lint.per-file-ignores]
"benchmarks/**" = ["D", "S101"]
"tests/**" = ["S101", "D", "SLF001"]
"src/jobify/_internal/routing.py" = ["ERA001", "FIX004"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
no-lines-before = ["local-folder"]

[tool.codespell]
skip = "*.pyi,*.pyc,./site"

# Python Semantic Release
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
build_command = """
    uv lock --upgrade-package jobify
    git add uv.lock
    uv build
"""
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = true
upload_to_repository = false
upload_to_vcs_release = true


[tool.semantic_release.commit_parser_options]
major_tags = ["BREAKING CHANGE"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true


[tool.semantic_release.changelog]
# Recommended patterns for conventional commits parser that is scope aware
exclude_commit_patterns = [
    '''Initial [Cc]ommit.*''', # codespell:ignore ommit
    '''refactor(?:\([^)]*?\))?: .+''',
    '''polish(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''chore(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''test(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''Merged? .*''',
]
[tool.semantic_release.changelog.default_templates]
changelog_file = "docs/CHANGELOG.md"
mask_initial_release = true

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.semantic_release.remote]
type = "github"
ignore_token_for_push = true
