[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
real_world = "real_world.main:main"

[project]
name = "real-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sergey", email = "maclovi.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jobify==0.5.2",
]

[dependency-groups]
lint = [
    "mypy",
    "ruff",
    "codespell",
]
dev = [
    { include-group = "lint" },
]

[tool.basedpyright]
include = ["src"]
ignore = ["**/__pycache__"]
pythonVersion = "3.10"
reportAny = false
reportExplicitAny = false
reportPrivateUsage = false
